// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LuaTable deprecation warning property access set: code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    return tbl:set(\\"foo\\", 0)
end
return ____exports"
`;

exports[`LuaTable deprecation warning property access set: diagnostics 1`] = `"main.ts(12,16): error TSTL: '@luaTable' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#luatable for more information."`;

exports[`LuaTable removed warning constructor: code 1`] = `
"local ____lualib = require(\\"lualib_bundle\\")
local __TS__New = ____lualib.__TS__New
____table = __TS__New(Table)"
`;

exports[`LuaTable removed warning constructor: diagnostics 1`] = `"main.ts(11,15): error TSTL: '@luaTable' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#luatable for more information."`;

exports[`LuaTable removed warning property access get: code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    return tbl:get(\\"foo\\")
end
return ____exports"
`;

exports[`LuaTable removed warning property access get: diagnostics 1`] = `"main.ts(12,16): error TSTL: '@luaTable' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#luatable for more information."`;

exports[`LuaTable removed warning property access length: code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    return tbl.length
end
return ____exports"
`;

exports[`LuaTable removed warning property access length: diagnostics 1`] = `"main.ts(12,16): error TSTL: '@luaTable' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#luatable for more information."`;

exports[`extension removed: code 1`] = `
"local ____lualib = require(\\"lualib_bundle\\")
local __TS__Class = ____lualib.__TS__Class
local __TS__ClassExtends = ____lualib.__TS__ClassExtends
---
-- @extension
B = __TS__Class()
B.name = \\"B\\"
__TS__ClassExtends(B, A)"
`;

exports[`extension removed: code 2`] = `
"local ____lualib = require(\\"lualib_bundle\\")
local __TS__Class = ____lualib.__TS__Class
local __TS__ClassExtends = ____lualib.__TS__ClassExtends
---
-- @metaExtension
B = __TS__Class()
B.name = \\"B\\"
__TS__ClassExtends(B, A)"
`;

exports[`extension removed: diagnostics 1`] = `"main.ts(4,9): error TSTL: '@extension' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#extension for more information."`;

exports[`extension removed: diagnostics 2`] = `"main.ts(4,9): error TSTL: '@metaExtension' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#metaextension for more information."`;

exports[`forRange removed: code 1`] = `""`;

exports[`forRange removed: diagnostics 1`] = `"main.ts(4,25): error TSTL: '@forRange' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#forrange for more information."`;

exports[`luaiterator removed: code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local arr = {\\"a\\", \\"b\\", \\"c\\"}
    local function luaIter(self)
        local i = 0
        return function()
            local ____i_0 = i
            i = ____i_0 + 1
            return arr[____i_0 + 1]
        end
    end
    local result = \\"\\"
    return result
end
return ____exports"
`;

exports[`luaiterator removed: diagnostics 1`] = `"main.ts(10,23): error TSTL: '@luaIterator' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#luaiterator for more information."`;

exports[`phantom removed: code 1`] = `
"A = A or ({})
do
    local function nsMember(self)
    end
end"
`;

exports[`phantom removed: diagnostics 1`] = `"main.ts(3,9): error TSTL: '@phantom' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#phantom for more information."`;

exports[`pureAbstract removed: code 1`] = `
"local ____lualib = require(\\"lualib_bundle\\")
local __TS__Class = ____lualib.__TS__Class
local __TS__ClassExtends = ____lualib.__TS__ClassExtends
ClassB = __TS__Class()
ClassB.name = \\"ClassB\\"
__TS__ClassExtends(ClassB, ClassA)"
`;

exports[`pureAbstract removed: diagnostics 1`] = `"main.ts(4,22): error TSTL: '@pureAbstract' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#pureabstract for more information."`;

exports[`tuplereturn lambda: code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    ---
    -- @tupleReturn
    local function f()
        return {3, 4}
    end
end
return ____exports"
`;

exports[`tuplereturn lambda: diagnostics 1`] = `"main.ts(2,39): error TSTL: '@tupleReturn' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#tuplereturn for more information."`;

exports[`tuplereturn removed on function declaration: code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    ---
    -- @tupleReturn
    local function tuple(self)
        return {3, 5, 1}
    end
end
return ____exports"
`;

exports[`tuplereturn removed on function declaration: diagnostics 1`] = `"main.ts(3,9): error TSTL: '@tupleReturn' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#tuplereturn for more information."`;

exports[`tuplereturn removed: code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    ---
    -- @tupleReturn
    local function tuple(self)
        return {3, 5, 1}
    end
    return tuple(nil)[3]
end
return ____exports"
`;

exports[`tuplereturn removed: diagnostics 1`] = `
"main.ts(3,9): error TSTL: '@tupleReturn' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#tuplereturn for more information.
main.ts(4,16): error TSTL: '@tupleReturn' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#tuplereturn for more information."
`;

exports[`vararg removed: code 1`] = `
"function foo(self, ...)
end
function vararg(self, ...)
    foo(_G, ...)
end"
`;

exports[`vararg removed: diagnostics 1`] = `"main.ts(6,17): error TSTL: '@vararg' has been removed and will no longer have any effect.See https://typescripttolua.github.io/docs/advanced/compiler-annotations#vararg for more information."`;
